Fixed bug where nav gets hidden behind Success Stories hero section

--- a/assets/css/sass/_main.scss
+++ b/assets/css/sass/_main.scss
@@ -151,7 +151,7 @@ body.show-menu {
 }
 
 nav {
-	z-index: 99;
+	z-index: 999;
 	top: 75px;
 	left: 0;
 	right: 0;
