--- a/assets/css/sass/_stories.scss
+++ b/assets/css/sass/_stories.scss
@@ -2,7 +2,7 @@
 	.hero {
 		background-image: url('../img/backgrounds/balloons-extended.jpg');
 		background-position: 0% 0%;
-		z-index: 9999;	
+		z-index: 99;	
 	}
 	.car {
 		display: none;
@@ -10,7 +10,7 @@
 		top: 50%;
 		left: 50%;
 		transform: translateX(-48%);
-		z-index: 999;
+		z-index: 9;
 		width: 60px;
 		height: 60px;
 	}
