--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -740,7 +740,7 @@ body.show-menu > div, body.show-menu > main, body.show-menu > footer {
   filter: blur(2px); }
 
 nav {
-  z-index: 99;
+  z-index: 999;
   top: 75px;
   left: 0;
   right: 0;
@@ -1416,7 +1416,7 @@ blockquote.emerald .author:before {
 .stories .hero {
   background-image: url("../img/backgrounds/balloons-extended.jpg");
   background-position: 0% 0%;
-  z-index: 9999; }
+  z-index: 99; }
 
 .stories .car {
   display: none;
@@ -1424,7 +1424,7 @@ blockquote.emerald .author:before {
   top: 50%;
   left: 50%;
   transform: translateX(-48%);
-  z-index: 999;
+  z-index: 9;
   width: 60px;
   height: 60px; }
 
